# GPUProg_Beadando

./: CMakeLists.txt  main.cpp
sources/: comp_divergence.glsl  comp_finalize_height.glsl  comp_jacobi.glsl  comp_minmax.glsl  frag.glsl  vert.glsl
